Bug 90481 - Cropped dialog buttons
Summary: Cropped dialog buttons
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-04-06 17:43 UTC by Yousuf Philips (jay) (retired)
Modified: 2015-12-17 08:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-04-06 17:43:01 UTC
I've noticed in master a number of dialogs with cropped buttons, as seen in attachment 114250 [details]. I've seen it on my Linux Mint 13 as well as Xubuntu 14.04 with master.
Comment 1 Julien Nabet 2015-04-06 18:00:52 UTC
When confirming the change of LanguageUI too:
- Menu Tools/Options
- Language Settings/Languages
- change User Interface
- Click OK

I increase a bit importance since it's a regression.
Comment 2 Matthew Francis 2015-04-07 13:09:52 UTC
This seems to have begun at the below commit.
Adding Cc: to caolanm@redhat.com; Could you possibly take a look at this one? Thanks

    commit f0ee8ed43528b17e9ea6d83388fbaab0a645b677
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Fri Feb 13 16:54:13 2015 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Sat Feb 14 21:31:19 2015 +0000
    
        see if we can merge floating window and dialog child size/pos setting
Comment 3 Matthew Francis 2015-04-07 13:32:16 UTC
An even faster reproducer:
File - Digital Signatures... (with an unsaved document)
Comment 4 Commit Notification 2015-04-09 10:10:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95942b16f44bc6eac57ad7b579b4158565446884

Resolves: tdf#90481 fix cropped buttons

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2015-04-09 10:10:48 UTC
and here was me blaming the innocent idle/timer rework for that every time I saw it
Comment 6 Robinson Tryon (qubit) 2015-12-17 08:51:59 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]