Resolves: tdf#90481 fix cropped buttons

this reverts

    commit f0ee8ed43528b17e9ea6d83388fbaab0a645b677
    Author:     Caolán McNamara <caolanm@redhat.com>

        see if we can merge floating window and dialog child size/pos setting

seeing as we apparently can't merge them the way that tried to do

Change-Id: I25fb741c9ae73375124b469f98bf1eecd76ff3c1